[gd_scene load_steps=8 format=2]

[ext_resource path="res://Juego/UI/Minimapa/Rectangulo.png" type="Texture" id=1]
[ext_resource path="res://Juego/UI/Minimapa/Player.png" type="Texture" id=2]
[ext_resource path="res://Juego/UI/Minimapa/Minimapa.gd" type="Script" id=3]
[ext_resource path="res://Juego/UI/Minimapa/EstacionRecarga.png" type="Texture" id=4]
[ext_resource path="res://Juego/UI/Minimapa/BaseEnemiga3.png" type="Texture" id=5]
[ext_resource path="res://Juego/UI/Minimapa/Rel√©.png" type="Texture" id=6]
[ext_resource path="res://Juego/UI/Minimapa/Interceptor.png" type="Texture" id=7]

[node name="Minimapa" type="MarginContainer" groups=[
"ContenedorInfo",
]]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -159.0
margin_top = -192.0
margin_right = 159.0
margin_bottom = -16.0
rect_min_size = Vector2( 318, 176 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CuadroMiniMapa" type="NinePatchRect" parent="."]
margin_right = 318.0
margin_bottom = 176.0
texture = ExtResource( 1 )

[node name="ContenedorIconos" type="MarginContainer" parent="CuadroMiniMapa"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -159.0
margin_top = -88.0
margin_right = 159.0
margin_bottom = 88.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ZonaRenderizadorMiniMapa" type="TextureRect" parent="CuadroMiniMapa/ContenedorIconos"]
margin_right = 318.0
margin_bottom = 176.0

[node name="IconoPlayer" type="Sprite" parent="CuadroMiniMapa/ContenedorIconos/ZonaRenderizadorMiniMapa"]
position = Vector2( 158.821, 84.6543 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 2 )

[node name="IconoBaseEnemigo" type="Sprite" parent="CuadroMiniMapa/ContenedorIconos/ZonaRenderizadorMiniMapa"]
visible = false
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 86.9019, 50.9423 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 5 )

[node name="IconoRecarga" type="Sprite" parent="CuadroMiniMapa/ContenedorIconos/ZonaRenderizadorMiniMapa"]
visible = false
modulate = Color( 0, 0.745098, 0.945098, 1 )
position = Vector2( 261.455, 45.6982 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 4 )

[node name="IconoRele" type="Sprite" parent="CuadroMiniMapa/ContenedorIconos/ZonaRenderizadorMiniMapa"]
visible = false
modulate = Color( 0.466667, 0.25098, 0.780392, 1 )
position = Vector2( 261.455, 77.5181 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 6 )

[node name="IconoInterceptor" type="Sprite" parent="CuadroMiniMapa/ContenedorIconos/ZonaRenderizadorMiniMapa"]
visible = false
modulate = Color( 0.956863, 0.87451, 0, 1 )
position = Vector2( 261.455, 45.6982 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 7 )

[node name="TimerVisibilidad" type="Timer" parent="."]
one_shot = true

[node name="TweenVisibilidad" type="Tween" parent="."]
[connection signal="timeout" from="TimerVisibilidad" to="." method="_on_TimerVisibilidad_timeout"]
